solve overflow error

--- a/src/components/Chatscreen/Chatscreen.css
+++ b/src/components/Chatscreen/Chatscreen.css
@@ -19,7 +19,7 @@
 
 .chat-user-info{
     height: 10vh;
-    width: 100vw;
+    width: 100%;
     background-color: #6969ffc7;
     position:fixed;
     top: 0;
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     gap: 2vw;
-    padding-left: 55px;
+    justify-content: start;
     z-index: 9999;
 }
 
@@ -73,6 +73,7 @@ transform: translate(-50%,-50%);
     .chat-screen{
         width: 100%;
         margin-left: 0;
+        overflow: hidden;
     }
     .main-chat-container{
         z-index: 999999999999999999;
@@ -82,7 +83,7 @@ transform: translate(-50%,-50%);
         min-height: 100vh;
         width: 100%;
        }
-       .chat-user-info{
-        padding-left: 2px;
-       }
+       .back-arrow{
+        margin-left: 0;
+    }
 }
