--- a/src/views/Chat/Chat.css
+++ b/src/views/Chat/Chat.css
@@ -1,8 +1,10 @@
+
 .chats-container{
     min-height: 100vh;
     width: 100vw;
     margin-left: 55px;
 }
+
 
 .all-chats{
     width: 60vw;
@@ -24,6 +26,7 @@
         width: 100vw;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
     }
     .user-serch-img{
         width: 100%;
